--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 Example Test HTML File if needed
 <!doctype html>
 <html lang="en-us">
+  <link rel="stylesheet" href="css/normalize.css">
 <head>
   <title>Your Name</title>
 </head>
