--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-Example Test HTML File if needed
+
 <!doctype html>
 <html lang="en-us">
-  <link rel="stylesheet" href="css/normalize.css">
+
 <head>
-  <title>Your Name</title>
+  <title>Diana Urbina</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@200&family=Catamaran&family=DM+Serif+Display&family=PT+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
- <h1>Your Name</h1>
+  <h1>Diana Urbina</h1>
 </body>
 </html>  
