--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
-
-<!doctype html>
+<!doctype HTML>
 <html lang="en-us">
 
-<head>
-  <title>Diana Urbina</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@200&family=Catamaran&family=DM+Serif+Display&family=PT+Serif&display=swap" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Diana M. Urbina Guerra</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@200&family=Catamaran&family=DM+Serif+Display&family=PT+Serif&display=swap" rel="stylesheet">
+  </head>
 <body>
-  <h1>Diana Urbina</h1>
+  <header>
+    <h1>Diana Urbina Guerra</h1>
+  </header>
+  <h4>WDD 230: Assignment Portal</h4>
+  <ul>
+    <li>Lesson1</li>
+    <li>Lesson2</li>
+  </ul>
+  <footer>&copy; 2022 | Diana Urbina Guerra | BYUI Online Learning</footer>
 </body>
 </html>  
