--- a/index.html
+++ b/index.html
@@ -3,56 +3,29 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Diana M. Urbina Guerra</title>
+    <title>Assignment Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <style>
-      body {
-        display: grid;
-        grid-template-columns: 600px;
-      }
-      h1 {
-        color:rgb(29, 29, 29);
-        background-color:rgb(193, 165, 116);
-        border-radius: 25px;
-        padding: 20px;
-        padding-left: 40px;
-
-      }
-      .course{
-        display: grid;
-        grid-template-columns: 2fr;
-        grid-template-rows: 2fr;
-      }
-      .courses{
-        grid-column: 1/2;
-        grid-row: 2/2;
-        
-      }
-      .profile-picture{
-        grid-column: 2/2;
-        grid-row: 2/2;
-      }
-
-    </style>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   </head>
-<body>
-  <header>
-    <h1>Diana Urbina Guerra</h1>
-  </header>
-  <div class="course">
-    <h4>WDD 230: Assignment Portal</h4>
-    <ul class="courses">
-      <li>Lesson1</li>
-      <li>Lesson2</li>
-    </ul>
-  <img
-  class="profile-picture"
-  src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/9F0157D8-DBAE-48BB-A96E-DB02021D93D6_4_5005_c.jpeg?v=1650478795917"
-  alt="profile-picture">
-  </div>
+  <body>
+    <header>
+      <h1>Diana Urbina Guerra</h1>
+    </header>
+    <div class="course">
+      <h4>WDD 230: Assignment Portal</h4>
+      <ul class="courses">
+        <li>Lesson1</li>
+        <li>Lesson1</li>
+      </ul>
+      <img
+      class="profile-picture"
+      src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/9F0157D8-DBAE-48BB-A96E-DB02021D93D6_4_5005_c.jpeg?v=1650478795917"
+      alt="profile-picture">
+    </div>
   <footer>&copy; 2022 | Diana Urbina Guerra | BYUI Online Learning</footer>
 </body>
 </html>  
