--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!doctype HTML>
 <html lang="en-us">
 
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Assignment Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <title>Assignment Portal</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  </head>
-  <body>
-    <header>
+</head>
+<body>
+  <header>
       <h1>Diana Urbina Guerra</h1>
-    </header>
-    <div class="course">
-      <h4>WDD 230: Assignment Portal</h4>
-      <ul class="courses">
-        <li>Lesson1</li>
-        <li>Lesson1</li>
-      </ul>
-      <img
-      class="profile-picture"
-      src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/9F0157D8-DBAE-48BB-A96E-DB02021D93D6_4_5005_c.jpeg?v=1650478795917"
-      alt="profile-picture">
-    </div>
+  </header>
+  <div class="courseName">
+  <h4>WDD 230: Assignment Portal</h4>
+  <ul class="courses">
+      <li>Lesson1</li>
+      <li>Lesson1</li>
+    </ul>
+    <img
+    class="profile-picture"
+    src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/9F0157D8-DBAE-48BB-A96E-DB02021D93D6_4_5005_c.jpeg?v=1650478795917"
+    alt="profile-picture">
+  </div>
   <footer>&copy; 2022 | Diana Urbina Guerra | BYUI Online Learning</footer>
 </body>
 </html>  
