Finished columns and rows

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
       <li>Lesson1</li>
       <li>Lesson1</li>
     </ul>
-    <img
-    class="profile-picture"
+  </div>
+  <div class="picture">
+    <img class="profile-picture"
     src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/9F0157D8-DBAE-48BB-A96E-DB02021D93D6_4_5005_c.jpeg?v=1650478795917"
     alt="profile-picture">
   </div>
+
   <footer>&copy; 2022 | Diana Urbina Guerra | BYUI Online Learning</footer>
 </body>
 </html>  
