--- a/index.html
+++ b/index.html
@@ -11,19 +11,32 @@
   <header>
       <h1>Diana Urbina Guerra</h1>
   </header>
-  <div class="courseName">
+  <div class="assignments">
   <h4>WDD 230: Assignment Portal</h4>
-  <ul class="courses">
-      <li>Lesson1</li>
-      <li>Lesson1</li>
-    </ul>
+    <nav>
+      <ul>
+        <li><a href="index.html">Lesson 01: Course Assignment Portal</a></li>
+        <li><a href="#">Lesson 01: Design Principles Document</a></li>
+        <li><a href="#">Lesson 02: Website Planning Document</a></li>
+        <li><a href="#">Lesson 03: Preston Town Page Start</a></li>
+        <li><a href="#">Lesson 04: Preston Town Page</a></li>
+        <li><a href="#">Lesson 05: Responsive Images</a></li>
+        <li><a href="#">Lesson 06: The Gallery Page</a></li>
+        <li><a href="#">Lesson 06: The Storm Center</a></li>
+        <li><a href="#">Lesson 07: The Weather Site Homepage</a></li>
+        <li><a href="#">Lesson 07: Preston Weather API</a></li>
+      </ul>
+    </nav>
   </div>
   <div class="picture">
     <img class="profile-picture"
-    src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/9F0157D8-DBAE-48BB-A96E-DB02021D93D6_4_5005_c.jpeg?v=1650478795917"
+    src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/headshot(1).jpg?v=1650564823170"
     alt="profile-picture">
   </div>
+  <footer>
+    <p>&copy; 2022 | Diana Urbina Guerra | BYUI Online Learning</p>
+    <p>Last Updated: <span id="footer-date:">04/21/22 03:25:00</span></P>
+  </footer>
 
-  <footer>&copy; 2022 | Diana Urbina Guerra | BYUI Online Learning</footer>
 </body>
 </html>  
