--- a/design-principles.html
+++ b/design-principles.html
@@ -15,24 +15,27 @@
       <h1>Design Principles</h1>
   </header>
   <div class="examples-grid">
-      <h2>Hierarchy</h2>
+
       <div class="hierarchy">
+        <h2>Hierarchy</h2>
         <img id="example1"
         src=""
         alt="example1">
       </div>
       <p>
       </p>
-      <h2>White Space</h2>
+
       <div class="white-space">
+        <h2>White Space</h2>
         <img id="example2"
         src=""
         alt="example2">
       </div>
       <p>
       </p>
-      <h2>Contrast</h2>
-      <div class="constrast">
+
+      <div class="contrast">
+        <h2>Contrast</h2>
         <img id="example3"
         src=""
         alt="example3">
