--- a/design-principles.html
+++ b/design-principles.html
@@ -8,18 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/.css">
 </head>
 <body>
   <header>
-      <h1>Design Principles</h1>
+      <h1 >Design Principles</h1>
   </header>
   <div class="examples-grid">
 
       <div class="hierarchy">
         <h2>Hierarchy</h2>
         <img id="example1"
-        src=""
+        src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/hierarchy.jpg?v=1650589706237" width="300"
         alt="example1">
       </div>
       <p>
@@ -28,7 +27,7 @@
       <div class="white-space">
         <h2>White Space</h2>
         <img id="example2"
-        src=""
+        src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/white%20space.jpg?v=1650589699660" width="300"
         alt="example2">
       </div>
       <p>
@@ -37,7 +36,7 @@
       <div class="contrast">
         <h2>Contrast</h2>
         <img id="example3"
-        src=""
+        src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/contrast.jpg?v=1650589697332" width="300"
         alt="example3">
       </div>
       <p>
