added first paragraph

--- a/design-principles.html
+++ b/design-principles.html
@@ -20,9 +20,10 @@
         <img id="example1"
         src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/hierarchy.jpg?v=1650589706237" width="300"
         alt="example1">
+        <p>Company: <a href="https://www.pizzahut.com/?gclid=Cj0KCQjwgYSTBhDKARIsAB8KukuKXJr4mRCLCLhvkd6UA-Or11g3bsWcGVqM2AvAApVVJiEugDCOo20aAinUEALw_wcB&gclsrc=aw.ds">Pizza Hut</a></p>
+        <p>This mobile website uses sizes, fonts, and color in ways that sequently grabs your attention. For example, the picture with the offer stands out the most, then you have the button to start the order, and then more offers underneath.</p>
+  
       </div>
-      <p>
-      </p>
 
       <div class="white-space">
         <h2>White Space</h2>
