Fixed images size

--- a/design-principles.html
+++ b/design-principles.html
@@ -18,18 +18,19 @@
       <div class="hierarchy">
         <h2>Hierarchy</h2>
         <img id="example1"
-        src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/hierarchy.jpg?v=1650589706237" width="300"
+        src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/1.jpg?v=1650675153169"
         alt="example1">
-        <p>Company: <a href="https://www.pizzahut.com/?gclid=Cj0KCQjwgYSTBhDKARIsAB8KukuKXJr4mRCLCLhvkd6UA-Or11g3bsWcGVqM2AvAApVVJiEugDCOo20aAinUEALw_wcB&gclsrc=aw.ds">Pizza Hut</a></p>
+        <p>Company: <a href="https://www.pizzahut.com/?gclid=Cj0KCQjwpImTBhCmARIsAKr58czhlSiLYRSjgTfnjsmfsYV9Tto2NZ9teFKezPCwNkhUVf7AxqNLfvEaAhtoEALw_wcB&gclsrc=aw.ds">Pizza Hut</a></p>
         <p>This mobile website uses sizes, fonts, and color in ways that sequently grabs your attention. For example, the picture with the offer stands out the most, then you have the button to start the order, and then more offers underneath.</p>
-  
       </div>
 
       <div class="white-space">
         <h2>White Space</h2>
         <img id="example2"
-        src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/white%20space.jpg?v=1650589699660" width="300"
+        src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/2.jpg?v=1650675147105"
         alt="example2">
+        <p>Company: <a href="https://www.pizzahut.com/?gclid=Cj0KCQjwgYSTBhDKARIsAB8KukuKXJr4mRCLCLhvkd6UA-Or11g3bsWcGVqM2AvAApVVJiEugDCOo20aAinUEALw_wcB&gclsrc=aw.ds">You Decide</a></p>
+        <p>This mobile website uses sizes, fonts, and color in ways that sequently grabs your attention. For example, the picture with the offer stands out the most, then you have the button to start the order, and then more offers underneath.</p>
       </div>
       <p>
       </p>
@@ -37,7 +38,7 @@
       <div class="contrast">
         <h2>Contrast</h2>
         <img id="example3"
-        src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/contrast.jpg?v=1650589697332" width="300"
+        src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/3.jpg?v=1650675158829" 
         alt="example3">
       </div>
       <p>
