Added companies URL

--- a/design-principles.html
+++ b/design-principles.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/medium.css">
 </head>
 <body>
   <header>
@@ -29,7 +30,7 @@
         <img id="example2"
         src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/2.jpg?v=1650675147105"
         alt="example2">
-        <p>Company: <a href="https://www.pizzahut.com/?gclid=Cj0KCQjwgYSTBhDKARIsAB8KukuKXJr4mRCLCLhvkd6UA-Or11g3bsWcGVqM2AvAApVVJiEugDCOo20aAinUEALw_wcB&gclsrc=aw.ds">You Decide</a></p>
+        <p>Company: <a href="https://www.youdecide.com/portal/login">You Decide</a></p>
         <p>This mobile website uses sizes, fonts, and color in ways that sequently grabs your attention. For example, the picture with the offer stands out the most, then you have the button to start the order, and then more offers underneath.</p>
       </div>
       <p>
@@ -40,6 +41,8 @@
         <img id="example3"
         src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/3.jpg?v=1650675158829" 
         alt="example3">
+        <p>Company: <a href="https://individual.carefirst.com/individuals-families/home.page">CareFirst</a></p>
+        <p>This mobile website uses sizes, fonts, and color in ways that sequently grabs your attention. For example, the picture with the offer stands out the most, then you have the button to start the order, and then more offers underneath.</p>
       </div>
       <p>
       </p>
