Added paragraph and css

--- a/design-principles.html
+++ b/design-principles.html
@@ -31,7 +31,7 @@
         src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/2.jpg?v=1650675147105"
         alt="example2">
         <p>Company: <a href="https://www.youdecide.com/portal/login">You Decide</a></p>
-        <p>This mobile website uses sizes, fonts, and color in ways that sequently grabs your attention. For example, the picture with the offer stands out the most, then you have the button to start the order, and then more offers underneath.</p>
+        <p>For this example, this mobile website implements the white space principle. In the example, we can see the white background, only having the contrast of the words to make it more readable. </p>
       </div>
       <p>
       </p>
@@ -42,7 +42,7 @@
         src="https://cdn.glitch.global/2884ecfe-ccf0-4b8e-8ee2-f72a0b37d719/3.jpg?v=1650675158829" 
         alt="example3">
         <p>Company: <a href="https://individual.carefirst.com/individuals-families/home.page">CareFirst</a></p>
-        <p>This mobile website uses sizes, fonts, and color in ways that sequently grabs your attention. For example, the picture with the offer stands out the most, then you have the button to start the order, and then more offers underneath.</p>
+        <p>This mobile website shows a lot of contrast with the fonts, objects, and background. First it creates a contrast with the background and buttons. Then, the buttons and the font color creates another layer of contrast.</p>
       </div>
       <p>
       </p>
