Added design principles URL

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Lesson 01: Course Assignment Portal</a></li>
-        <li><a href="#">Lesson 01: Design Principles Document</a></li>
+        <li><a href="/design-principles.html">Lesson 01: Design Principles Document</a></li>
         <li><a href="#">Lesson 02: Website Planning Document</a></li>
         <li><a href="#">Lesson 03: Preston Town Page Start</a></li>
         <li><a href="#">Lesson 04: Preston Town Page</a></li>
