--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -17,4 +17,19 @@
         <link type="stylesheet" rel="stylesheet" href="CSS/medium.css" />
         <link type="stylesheet" rel="stylesheet" href="CSS/large.css" />
     </head>
-
+    <body>
+        <header>
+            <h1> Weather Project</h1>
+            <h2>Planning Document</h2>
+            <div id="header-nav-bar">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Main</a></li>
+                        <li><a href="target-audience.html">Target Audience</a></li>
+                        <li><a href="color-scheme.html">Color Scheme</a></li>
+                        <li><a href="typography.html">Typography</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </body>
