done up to image

--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -32,4 +32,14 @@
                 </nav>
             </div>
         </header>
+        <main>
+            <h2>Site Name: </h2>
+            <p>Upper The Weather</p>
+            <h2>Site Purpose:</h2>
+            <p>Upper The Weather is not only a weather site. This website has the purpose is to familiarize residents and visitors within the area with valuable community information. We want to inspire people get more involved and create stronger communities.
+            </p>
+            <h2>Site URL:</h2>
+            <p>http://www.uppertheweather.com/</p>
+            <h2>Site Logo:</h2>
+            <img class="logo" src="images/sunrise.png" alt="logo"/>
     </body>
