finished index.html

--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content=" Lesson 2: Weather Planning Assingment by Diana Urbina Guerra"/>
-        <meta name="author" content="Diana Urbina" />
+        <meta name="author" content="Diana Urbina Guerra" />
         <title>Weather Project Planning Document</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -42,4 +42,17 @@
             <p>http://www.uppertheweather.com/</p>
             <h2>Site Logo:</h2>
             <img class="logo" src="images/sunrise.png" alt="logo"/>
+            <h2>Site Motto:</h2>
+            <p>Up, out, and about</p>
+        </main>
+        <footer>
+            <p>
+                &copy;<span id="year"></span> |
+                <a href="https://dianauguerra.github.io/">Diana Urbina Guerra</a> | VA, USA
+                |
+                <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+            </p>
+            <p id="lastmod">Last modified</p>
+        </footer>
     </body>
+
