Finished target audience html

--- a/Lesson2/index.html
+++ b/Lesson2/index.html
@@ -48,7 +48,7 @@
         <footer>
             <p>
                 &copy;<span id="year"></span> |
-                <a href="https://dianauguerra.github.io/">Diana Urbina Guerra</a> | VA, USA
+                <a href="https://github.com/Dianauguerra/Dianauguerra.github.io">Diana Urbina Guerra</a> | VA, USA
                 |
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
             </p>
