updated color examples

--- a/Lesson2/color-scheme.html
+++ b/Lesson2/color-scheme.html
@@ -36,9 +36,9 @@
             <h1>Color Palette</h1>
             <img id = "colors" src="images/UpperTheWeather.png" alt="Colors"/>
             <ul>
-                <li><span id="header-example">Header/Footer: #232e49 </span></li>
-                <li><span id="background-example">Background: #fffcf2 </span></li>
-                <li><span id="accent-example">Accent colors: #ffb641 </span></li>
+                <li><span id="header-example">Header/Footer</span></li>
+                <li><span id="background-example">Background</span></li>
+                <li><span id="accent-example">Accent colors</span></li>
               </ul>
         </main>
         <footer>
