--- a/Lesson2/target-audience.html
+++ b/Lesson2/target-audience.html
@@ -11,11 +11,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Bebas+Neue&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Bebas+Neue&family=Poppins:wght@100&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="CSS/large.css" />
+        <link rel="stylesheet" href="CSS/medium.css" />
+        <link rel="stylesheet" href="CSS/small.css" />
         <link rel="stylesheet" href="CSS/normalize.css" />
-        <link type="stylesheet" rel="stylesheet" href="CSS/small.css" />
-        <link type="stylesheet" rel="stylesheet" href="CSS/medium.css" />
-        <link type="stylesheet" rel="stylesheet" href="CSS/large.css" />
     </head>
     <body>
         <header>
