--- a/Lesson2/typography.html
+++ b/Lesson2/typography.html
@@ -19,8 +19,8 @@
     </head>
     <body>
         <header>
-            <h1> Weather Project</h1>
-            <h2>Planning Document</h2>
+            <h1 id="header-top"> Weather Project</h1>
+            <h2 id="header-top2">Planning Document</h2>
             <div id="header-nav-bar">
                 <nav>
                     <ul>
@@ -34,8 +34,8 @@
         </header>
         <main>
             <h1>Typography</h1>
-                <h1>Header Font Example</h1>
-                <p>Paragraph Font Example</p>
+                <h1 id="header-font">Header Font Example</h1>
+                <p id="paragraph-font">Paragraph Font Example</p>
         </main>
         <footer>
             <p>
