--- a/Lesson2/target-audience.html
+++ b/Lesson2/target-audience.html
@@ -19,8 +19,8 @@
     </head>
     <body>
         <header>
-            <h1> Weather Project</h1>
-            <h2>Planning Document</h2>
+            <h1 id="header-top"> Weather Project</h1>
+            <h2 id="header-top2">Planning Document</h2>
             <div id="header-nav-bar">
                 <nav>
                     <ul>
