--- a/Lesson2/target-audience.html
+++ b/Lesson2/target-audience.html
@@ -37,12 +37,14 @@
             <p>The target audience are residents and tourists that are or will be in the area. They are people who like to plan out their days and need realiable information. </p>
             <h2>Two Personas:</h2>
             <h3>#1</h3>
+            <img class="persona" src="images/persona1.png" alt="persona1">
             <p>Name: Raquel</p>
             <p>Age: 18</p>
             <p>Occupation: Student</p>
             <p>Family status: single</p>
             <p>Interests: Being outdoors around nature and doing community service </p>
             <h3>#2</h3>
+            <img class="persona" src="images/persona2.png" alt="persona2">
             <p>Name: John</p>
             <p>Age: 45</p>
             <p>Occupation: Teacher</p>
