--- a/Lesson2/color-scheme.html
+++ b/Lesson2/color-scheme.html
@@ -13,9 +13,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Bebas+Neue&family=Poppins:wght@100&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="CSS/large.css" />
-        <link rel="stylesheet" href="Lesson2/CSS/medium.css" />
+        <link rel="stylesheet" href="CSS/medium.css" />
         <link rel="stylesheet" href="CSS/small.css" />
-        <link rel="stylesheet" href="CSS/normalize.css" />
     </head>
     <body>
         <header>
