updated sizes for logo

--- a/Lesson2/target-audience.html
+++ b/Lesson2/target-audience.html
@@ -50,7 +50,7 @@
             <p>Family status: Married with kids</p>
             <p>Interests: Spending time with family in road trips and trekking with friends</p>
             <h2>Scenarios:</h2>
-            <ul>
+            <ul id = "scenarios">
                 <li>Student is looking to do community service as a project for school. She needs a reliable place and contacts.</li>
                 <li>A family is visiting a family member in the area. They want to know the weather for the weekend and any events to attend as a family. </li>
                 <li>A school teacher wants to program a field trip but wants to know the weather to assign a day and time.</li>
