--- a/Lesson2/typography.html
+++ b/Lesson2/typography.html
@@ -43,7 +43,7 @@
                 |
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
             </p>
-            <p id="lastmod">Last modified</p>
+            <p id="lastmod">Last modified: 04/28/2022 13:46:00</p>
         </footer>
     </body>
 
