--- a/weather/preston.html
+++ b/weather/preston.html
@@ -26,11 +26,14 @@
             </section>
         </header>
         <nav>
-            <ul>
-                <li><a href="index.html">Main</a></li>
-                <li><a href="target-audience.html">Target Audience</a></li>
-                <li><a href="color-scheme.html">Color Scheme</a></li>
-                <li><a href="typography.html">Typography</a></li>
+            <ul class="navigation">
+                <li><a class="menu" href="#">Menu</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Preston Idaho</a></li>
+                <li><a href="#">Soda Springs</a></li>
+                <li><a href="#">Fish Haven</a></li>
+                <li><a href="#">Storm Center</a></li>
+                <li><a href="#">Gallery</a></li>
             </ul>
         </nav>
         <main>
