--- a/weather/preston.html
+++ b/weather/preston.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/small.css" />
         <link rel="stylesheet" href="css/large.css" />
+        <script defer src="js/js.js"></script>
     </head>
     <body>
         <header>
@@ -25,9 +26,9 @@
                 <div class="motto">Up, out, and about</div>
             </section>
         </header>
-        <nav>
+        <nav class="navbar">
             <ul class="navigation">
-                <li><a class="menu" href="#">Menu</a></li>
+                <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
