--- a/weather/preston.html
+++ b/weather/preston.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content=" Lesson 2: Weather Planning Assingment by Diana Urbina Guerra"/>
+        <meta name="description" content="Preston page by Diana Urbina Guerra"/>
         <meta name="author" content="Diana Urbina Guerra" />
         <title>Upper The Weather</title>
 
@@ -38,17 +38,20 @@
             </ul>
         </nav>
         <main>
-            <h2>Site Name: </h2>
-            <p>Upper The Weather</p>
-            <h2>Site Purpose:</h2>
-            <p>Upper The Weather is not only a weather site. This website has the purpose is to familiarize residents and visitors within the area with valuable community information. We want to inspire people get more involved and create stronger communities.
-            </p>
-            <h2>Site URL:</h2>
-            <p>http://www.uppertheweather.com/</p>
-            <h2>Site Logo:</h2>
-            <img class="logo" src="images/sunrise.png" alt="logo"/>
-            <h2>Site Motto:</h2>
-            <p>Up, out, and about</p>
+            <h2 class="cityname">Preston, Idaho</h2>
+            <div class="contentbox"></div>
+            <h2>Weather Summary</h2>
+            <p>Description:</p>
+            <div class="contentbox"></div>
+            <h2>5 Day Forecast</h2>
+            <div class="contentbox"></div>
+            <h2>Article Title</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, incidunt. Perferendis maxime et enim quas expedita nulla dolorem illum minima autem, earum repudiandae soluta delectus, nostrum sit exercitationem hic quos.</p>
+            <div class="map-contact"></div>
+            <h2>Contact Information</h2>
+            <p>Email</p>
+            <p>Phone Number</p>
+            <img src="images/placeholder.png" alt="photo">
         </main>
         <footer>
             <p>
