--- a/weather/preston.html
+++ b/weather/preston.html
@@ -39,19 +39,27 @@
         </nav>
         <main>
             <h2 class="cityname">Preston, Idaho</h2>
-            <div class="contentbox"></div>
-            <h2>Weather Summary</h2>
-            <p>Description:</p>
-            <div class="contentbox"></div>
-            <h2>5 Day Forecast</h2>
-            <div class="contentbox"></div>
-            <h2>Article Title</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, incidunt. Perferendis maxime et enim quas expedita nulla dolorem illum minima autem, earum repudiandae soluta delectus, nostrum sit exercitationem hic quos.</p>
-            <div class="map-contact"></div>
-            <h2>Contact Information</h2>
-            <p>Email</p>
-            <p>Phone Number</p>
-            <img src="images/placeholder.png" alt="photo">
+            <div class="contentbox">
+                <h2>Weather Summary</h2>
+                <p>Description:</p>
+            </div>
+            <div class="contentbox">
+                <h2>5 Day Forecast</h2>
+                </div>
+            <div class="contentbox">
+                <h2>Article Title</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, incidunt. Perferendis maxime et enim quas expedita nulla dolorem illum minima autem, earum repudiandae soluta delectus, nostrum sit exercitationem hic quos.</p>
+            </div>
+            <div class="map-contact">
+                <picture>
+                    <img id="map" src="images/placeholder.png" alt="placeholder">
+                </picture>
+                <div id="contact">
+                    <h2>Contact Information</h2>
+                    <p>Email</p>
+                    <p>Phone Number</p>
+                </div>
+            </div>
         </main>
         <footer>
             <p>
@@ -60,7 +68,7 @@
                 |
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
             </p>
-            <p id="lastmod">Last modified: 04/28/2022 13:46:00</p>
+            <p id="oLastModif">Last modified: 04/28/2022 13:46:00</p>
         </footer>
     </body>
 
