--- a/weather/preston.html
+++ b/weather/preston.html
@@ -68,7 +68,8 @@
                 |
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
             </p>
-            <p id="oLastModif">Last modified: 04/28/2022 13:46:00</p>
+            <p>Last Modified:</p>
+            <p id="lastMod"></p>
         </footer>
     </body>
 
