updated links to assignments

--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -20,8 +20,8 @@
       <ul>
         <li><a href="index.html">Lesson 01: Course Assignment Portal</a></li>
         <li><a href="design-principles.html">Lesson 01: Design Principles Document</a></li>
-        <li><a href="#">Lesson 02: Website Planning Document</a></li>
-        <li><a href="#">Lesson 03: Preston Town Page Start</a></li>
+        <li><a href="https://Dianauguerra.github.io/Lesson2/index.html">Lesson 02: Website Planning Document</a></li>
+        <li><a href="https://Dianauguerra.github.io/weather/preston.html">Lesson 03: Preston Town Page Start</a></li>
         <li><a href="#">Lesson 04: Preston Town Page</a></li>
         <li><a href="#">Lesson 05: Responsive Images</a></li>
         <li><a href="#">Lesson 06: The Gallery Page</a></li>
