added description and js

--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Assignment Portal</title>
+    <meta name="description" content="Portal Page by Diana Urbina Guerra"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/normalize.css">
@@ -28,6 +28,7 @@
         <li><a href="#">Lesson 06: The Storm Center</a></li>
         <li><a href="#">Lesson 07: The Weather Site Homepage</a></li>
         <li><a href="#">Lesson 07: Preston Weather API</a></li>
+        <script defer src="index.js"></script>
       </ul>
     </nav>
   </div>
@@ -38,7 +39,8 @@
   </div>
   <footer>
     <p>&copy; 2022 | Diana Urbina Guerra | BYUI Online Learning</p>
-    <p>Last Updated: <span id="footer-date:">04/21/22 03:25:00</span></P>
+    <p>Last Modified:</p>
+    <p id="lastMod"></p>
   </footer>
 
 </body>
