--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -4,6 +4,8 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Portal Page by Diana Urbina Guerra"/>
+      <meta name="author" content="Diana Urbina Guerra" />
+      <title>Portal Page WDD 230</title>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link rel="stylesheet" href="css/normalize.css">
