--- a/weather/preston.html
+++ b/weather/preston.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Preston page by Diana Urbina Guerra"/>
         <meta name="author" content="Diana Urbina Guerra" />
-        <title>Upper The Weather</title>
+        <title>Upper The Weather - Preston, Idaho</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -39,9 +39,15 @@
         </nav>
         <main>
             <h2 class="cityname">Preston, Idaho</h2>
-            <div class="contentbox">
-                <h2>Weather Summary</h2>
-                <p>Description:</p>
+            <div class="weather-summary-div">
+                <img id="hero" src="images/heroimage.jpg" alt="hero-image">
+                <section class="stats">
+                    <h2>Weather Summary:</h2>
+                    
+                    </p>Precipitation: 10%</p>
+                    </p>Humidity: 93%</p>
+                    </p>Wind: 8 mph</p>
+                </section>  
             </div>
             <div class="contentbox">
                 <h2>5 Day Forecast</h2>
