--- a/weather/preston.html
+++ b/weather/preston.html
@@ -43,15 +43,41 @@
                 <img id="hero" src="images/heroimage.jpg" alt="hero-image">
                 <section class="stats">
                     <h2>Weather Summary:</h2>
-                    
                     </p>Precipitation: 10%</p>
                     </p>Humidity: 93%</p>
                     </p>Wind: 8 mph</p>
                 </section>  
             </div>
-            <div class="contentbox">
-                <h2>5 Day Forecast</h2>
-                </div>
+            <h2>5 Day Forecast</h2>
+            <div class="forecast">
+                
+                    <div class="day1">
+                        <h3>Wed</h3> 
+                        <img src="images/sunny.png" alt="sunny">
+                        <p>89°F | 32°C</p>
+                    </div>  
+                    <div class="day2">
+                        <h3>Wed</h3> 
+                        <img src="images/sunny.png" alt="sunny">
+                        <p>89°F</p>
+                    </div>  
+                    <div class="day3">
+                        <h3>Wed</h3> 
+                        <img src="images/sunny.png" alt="sunny">
+                        <p>89°F</p>
+                    </div>  
+                    <div class="day4">
+                        <h3>Wed</h3> 
+                        <img src="images/sunny.png" alt="sunny">
+                        <p>89°F</p>
+                    </div>      
+                    <div class="day5">
+                        <h3>Wed</h3> 
+                        <img src="images/sunny.png" alt="sunny">
+                        <p>89°F</p>
+                    </div>                  
+            </div>
+  
             <div class="contentbox">
                 <h2>Article Title</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, incidunt. Perferendis maxime et enim quas expedita nulla dolorem illum minima autem, earum repudiandae soluta delectus, nostrum sit exercitationem hic quos.</p>
