--- a/weather/preston.html
+++ b/weather/preston.html
@@ -48,7 +48,7 @@
                     </p>Wind: 8 mph</p>
                 </section>  
             </div>
-            <h2>5 Day Forecast</h2>
+            <h2 class="forecast-heading">5 Day Forecast</h2>
             <div class="forecast">
                 
                     <div class="day1">
@@ -78,9 +78,20 @@
                     </div>                  
             </div>
   
-            <div class="contentbox">
-                <h2>Article Title</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, incidunt. Perferendis maxime et enim quas expedita nulla dolorem illum minima autem, earum repudiandae soluta delectus, nostrum sit exercitationem hic quos.</p>
+            <div class="calendar">
+                <h2>Community Calendar</h2>
+                <img src="images/calendar.jpeg" alt="calendar image">
+                <h3>Tuesdays</h3>
+                <p>Story Time: 11 a.m., Franklin City Building</p>
+                <h3>Wednesdays</h3>
+                <p>Knit Wits: 11 a.m., Presbyterian Church, 206 East 200 North, Preston</p>
+                <p>Special Friends Club, 12:45 p.m., for all adults who have special needs, directed by library staff member Diane Steadman.</p>
+                <p>Every week has a different theme with books and STEM activities along with sensory and learning materials.</p>
+                <p>MGM Club: 4 p.m., Larsen-Sant Library</p>
+                <h3>Thursdays</h3>
+                <p>Story Time, 11 a.m., and 2 p.m., Larsen-Sant Library
+                <p>Adult Institute last class, 7 p.m., 2 Samuel 1-12/2 Samuel 13-24</p>
+                <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p>          
             </div>
             <div class="map-contact">
                 <picture>
