--- a/weather/preston.html
+++ b/weather/preston.html
@@ -93,15 +93,12 @@
                 <p>Adult Institute last class, 7 p.m., 2 Samuel 1-12/2 Samuel 13-24</p>
                 <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p>          
             </div>
-            <div class="map-contact">
-                <picture>
-                    <img id="map" src="images/placeholder.png" alt="placeholder">
-                </picture>
-                <div id="contact">
-                    <h2>Contact Information</h2>
+            <div class="map-and-contact">
+                <img class="map" src="images/prestonmap.png" alt="map">
+                <section class="contact">
+                  <h2>Contact Info</h2>
                     <p>Email</p>
                     <p>Phone Number</p>
-                </div>
             </div>
         </main>
         <footer>
