updated contact and map with social media

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -99,6 +99,10 @@
                   <h2>Contact Info</h2>
                     <p>Email</p>
                     <p>Phone Number</p>
+                    <img src="images/fb.png" alt="facebook icon">
+                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="images/insta.png" alt="insta icon">
+                </section>
             </div>
         </main>
         <footer>
