completed social media links

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -97,11 +97,11 @@
                 <img class="map" src="images/prestonmap.png" alt="map">
                 <section class="contact">
                   <h2>Contact Info</h2>
-                    <p>Email</p>
-                    <p>Phone Number</p>
-                    <img src="images/fb.png" alt="facebook icon">
-                    <img src="images/twitter.png" alt="twitter icon">
-                    <img src="images/insta.png" alt="insta icon">
+                    <p>Email: UpperTheWeather@gmail.com</p>
+                    <p>Phone Number: (123)456-7890</p>
+                    <a href="https://www.facebook.com/"><img src="images/fb.png" alt="facebook icon"></a>
+                    <a href="https://twitter.com/?lang=en"><img src="images/twitter.png" alt="twitter icon"></a>
+                    <a href="https://www.instagram.com/?hl=en"><img src="images/insta.png" alt="insta icon"></a>
                 </section>
             </div>
         </main>
