updated weather temperature

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -30,7 +30,7 @@
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Preston Idaho</a></li>
+                <li class="active"><a href="#">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="#">Storm Center</a></li>
@@ -54,27 +54,27 @@
                     <div class="day1">
                         <h3>Wed</h3> 
                         <img src="images/sunny.png" alt="sunny">
-                        <p>89°F | 32°C</p>
+                        <p>70°F | 32°C</p>
                     </div>  
                     <div class="day2">
                         <h3>Wed</h3> 
                         <img src="images/sunny.png" alt="sunny">
-                        <p>89°F</p>
+                        <p>60°F</p>
                     </div>  
                     <div class="day3">
                         <h3>Wed</h3> 
                         <img src="images/sunny.png" alt="sunny">
-                        <p>89°F</p>
+                        <p>67°F</p>
                     </div>  
                     <div class="day4">
                         <h3>Wed</h3> 
                         <img src="images/sunny.png" alt="sunny">
-                        <p>89°F</p>
+                        <p>55°F</p>
                     </div>      
                     <div class="day5">
                         <h3>Wed</h3> 
                         <img src="images/sunny.png" alt="sunny">
-                        <p>89°F</p>
+                        <p>47°F</p>
                     </div>                  
             </div>
   
