--- a/weather/preston.html
+++ b/weather/preston.html
@@ -14,9 +14,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/small.css" />
         <link rel="stylesheet" href="css/large.css" />
-        <script defer src="js/js.js"></script>
+        <script defer src="js/script.js"></script>
     </head>
     <body>
+        <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
         <header>
             <picture>
                 <img src="images/sunrise.png" alt="logo">
