used explicit width for images

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -38,7 +38,7 @@
         <main>
             <h2 class="cityname">Preston, Idaho</h2>
             <div class="weather-summary-div">
-                <img id="hero" src="images/heroimage.jpg" alt="hero-image">
+                <img id="hero" src="images/heroimage.jpg" width="800px" alt="hero-image">
                 <section class="stats">
                     <h2>Weather Summary:</h2>
                     </p>Precipitation: 10%</p>
@@ -76,7 +76,7 @@
             </div>
             <div class="calendar">
                 <h2>Community Calendar</h2>
-                <img src="images/calendar.jpeg" alt="calendar image">
+                <img src="images/calendar.jpeg" width="400px" alt="calendar image">
                 <h3>Tuesdays</h3>
                 <p>Story Time: 11 a.m., Franklin City Building</p>
                 <h3>Wednesdays</h3>
@@ -90,7 +90,7 @@
                 <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p>          
             </div>
             <div class="map-and-contact">
-                <img class="map" src="images/prestonmap.png" alt="map">
+                <img class="map" src="images/prestonmap.png" width="250px" alt="map">
                 <section class="contact">
                   <h2>Contact Info</h2>
                     <p>Email: UpperTheWeather@gmail.com</p>
