added explicit width to weather icon

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -38,7 +38,7 @@
         <main>
             <h2 class="cityname">Preston, Idaho</h2>
             <div class="weather-summary-div">
-                <img id="hero" src="images/heroimage.jpg" width="800px" alt="hero-image">
+                <img id="hero" src="images/heroimage.jpg" width="800px" height="auto" alt="hero-image">
                 <section class="stats">
                     <h2>Weather Summary:</h2>
                     </p>Precipitation: 10%</p>
@@ -50,33 +50,33 @@
             <div class="forecast">
                     <div class="day1">
                         <h3>Wed</h3> 
-                        <img src="images/sunny.png" alt="sunny">
+                        <img src="images/sunny.png" width="40px" alt="sunny">
                         <p>70°F | 32°C</p>
                     </div>  
                     <div class="day2">
                         <h3>Wed</h3> 
-                        <img src="images/sunny.png" alt="sunny">
+                        <img src="images/sunny.png" width="40px" alt="sunny">
                         <p>60°F</p>
                     </div>  
                     <div class="day3">
                         <h3>Wed</h3> 
-                        <img src="images/sunny.png" alt="sunny">
+                        <img src="images/sunny.png" width="40px" alt="sunny">
                         <p>67°F</p>
                     </div>  
                     <div class="day4">
                         <h3>Wed</h3> 
-                        <img src="images/sunny.png" alt="sunny">
+                        <img src="images/sunny.png" width="40px" alt="sunny">
                         <p>55°F</p>
                     </div>      
                     <div class="day5">
                         <h3>Wed</h3> 
-                        <img src="images/sunny.png" alt="sunny">
+                        <img src="images/sunny.png" width="40px" alt="sunny">
                         <p>47°F</p>
                     </div>                  
             </div>
             <div class="calendar">
                 <h2>Community Calendar</h2>
-                <img src="images/calendar.jpeg" width="400px" alt="calendar image">
+                <img src="images/calendar.jpeg" width="400px" height="auto" alt="calendar image">
                 <h3>Tuesdays</h3>
                 <p>Story Time: 11 a.m., Franklin City Building</p>
                 <h3>Wednesdays</h3>
@@ -90,14 +90,14 @@
                 <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p>          
             </div>
             <div class="map-and-contact">
-                <img class="map" src="images/prestonmap.png" width="250px" alt="map">
+                <img class="map" src="images/prestonmap.png" width="250px" height="auto" alt="map">
                 <section class="contact">
                   <h2>Contact Info</h2>
                     <p>Email: UpperTheWeather@gmail.com</p>
                     <p>Phone Number: (123)456-7890</p>
-                    <a href="https://www.facebook.com/"><img src="images/fb.png" alt="facebook icon"></a>
-                    <a href="https://twitter.com/?lang=en"><img src="images/twitter.png" alt="twitter icon"></a>
-                    <a href="https://www.instagram.com/?hl=en"><img src="images/insta.png" alt="insta icon"></a>
+                    <a href="https://www.facebook.com/"><img src="images/fb.png" width="32px" height="auto" alt="facebook icon"></a>
+                    <a href="https://twitter.com/?lang=en"><img src="images/twitter.png" width="32px" height="auto" alt="twitter icon"></a>
+                    <a href="https://www.instagram.com/?hl=en"><img src="images/insta.png" width="32px" height="auto" alt="insta icon"></a>
                 </section>
             </div>
         </main>
