--- a/weather/preston.html
+++ b/weather/preston.html
@@ -50,7 +50,7 @@
                     <p>Currently: <span id="temperature">38</span>°F | Broken Clouds</p>
                     <p>Wind Chill: <span id="windchill"></span>°F</p>
                     <p>High:41°F</p>
-                    </p>Humidity: 93%</p>
+                    <p>Humidity: 93%</p>
                     <p>Wind Speed: <span id="windspeed">5</span> mph</p>
                 </section>  
             </div>
@@ -58,33 +58,33 @@
             <div class="forecast">
                     <div class="day1">
                         <h3>Wed</h3> 
-                        <img src="images/sunny.png" width="40px" alt="sunny">
+                        <img src="images/sunny.png" width="40" alt="sunny">
                         <p>70°F | 32°C</p>
                     </div>  
                     <div class="day2">
                         <h3>Wed</h3> 
-                        <img src="images/sunny.png" width="40px" alt="sunny">
+                        <img src="images/sunny.png" width="40" alt="sunny">
                         <p>60°F</p>
                     </div>  
                     <div class="day3">
                         <h3>Wed</h3> 
-                        <img src="images/sunny.png" width="40px" alt="sunny">
+                        <img src="images/sunny.png" width="40" alt="sunny">
                         <p>67°F</p>
                     </div>  
                     <div class="day4">
                         <h3>Wed</h3> 
-                        <img src="images/sunny.png" width="40px" alt="sunny">
+                        <img src="images/sunny.png" width="40" alt="sunny">
                         <p>55°F</p>
                     </div>      
                     <div class="day5">
                         <h3>Wed</h3> 
-                        <img src="images/sunny.png" width="40px" alt="sunny">
+                        <img src="images/sunny.png" width="40" alt="sunny">
                         <p>47°F</p>
                     </div>                  
             </div>
             <div class="calendar">
                 <h2>Community Calendar</h2>
-                <img src="images/calendar.jpeg" width="400px" height="auto" alt="calendar image">
+                <img src="images/calendar.jpeg" width="400" alt="calendar image">
                 <h3>Tuesdays</h3>
                 <p>Story Time: 11 a.m., Franklin City Building</p>
                 <h3>Wednesdays</h3>
@@ -98,14 +98,14 @@
                 <p>BFF Club Meeting: 4 p.m., Larsen-Sant Library </p>          
             </div>
             <div class="map-and-contact">
-                <img class="map" src="images/prestonmap.png" width="250px" height="auto" alt="map">
+                <img class="map" src="images/prestonmap.png" width="250" alt="map">
                 <section class="contact">
                   <h2>Contact Info</h2>
                     <p>Email: UpperTheWeather@gmail.com</p>
                     <p>Phone Number: (123)456-7890</p>
-                    <a href="https://www.facebook.com/"><img src="images/fb.png" width="32px" height="auto" alt="facebook icon"></a>
-                    <a href="https://twitter.com/?lang=en"><img src="images/twitter.png" width="32px" height="auto" alt="twitter icon"></a>
-                    <a href="https://www.instagram.com/?hl=en"><img src="images/insta.png" width="32px" height="auto" alt="insta icon"></a>
+                    <a href="https://www.facebook.com/"><img src="images/fb.png" width="32"  alt="facebook icon"></a>
+                    <a href="https://twitter.com/?lang=en"><img src="images/twitter.png" width="32" alt="twitter icon"></a>
+                    <a href="https://www.instagram.com/?hl=en"><img src="images/insta.png" width="32"  alt="insta icon"></a>
                 </section>
             </div>
         </main>
