--- a/Lesson-4/lazyload.html
+++ b/Lesson-4/lazyload.html
@@ -19,10 +19,7 @@
         <img
             src="images/placeholder-image.webp"
             data-src="https://images.unsplash.com/photo-1526336024174-e58f5cdd8e13?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-            alt="cat1"
-            width="300"
-            height="400"
-
+            alt="cat1" width="300" height="400"
         />
         </picture>
         <br>
@@ -30,21 +27,15 @@
         <img
             src="images/placeholder-image.webp"
             data-src="https://images.unsplash.com/photo-1573865526739-10659fec78a5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=715&q=80"
-            alt="cat2"
-            width="300"
-            height="400"
-
+            alt="cat2" width="300" height="400"
         />
         </picture>
         <br>
         <picture>
         <img
-            src="images/placeholder.png"
+            src="images/placeholder-image.webp"
             data-src="https://images.unsplash.com/photo-1529778873920-4da4926a72c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=736&q=80"
-            alt="cat3"
-            loading="lazy"
-            width="300"
-            height="400"
+            alt="cat3" loading="lazy" width="300" height="400"
         />
         </picture>
         <br>
@@ -52,10 +43,7 @@
         <img
             src="images/placeholder-image.webp"
             data-src="https://images.unsplash.com/photo-1606214174585-fe31582dc6ee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-            alt="cat4"
-            loading="lazy"
-            width="300"
-            height="400"
+            alt="cat4" loading="lazy" width="300" height="400"
         />
         </picture>
         <br>
@@ -63,10 +51,7 @@
         <img
             src="images/placeholder-image.webp"
             data-src="https://images.unsplash.com/photo-1536590158209-e9d615d525e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-            alt="cat5"
-            loading="lazy"
-            width="300"
-            height="400"
+            alt="cat5" loading="lazy" width="300" height="400"
         />
         </picture>
         <br>
@@ -74,10 +59,7 @@
         <img
             src="images/placeholder-image.webp"
             data-src="https://images.unsplash.com/photo-1506891536236-3e07892564b7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=688&q=80"
-            alt="cat6"
-            loading="lazy"
-            width="300"
-            height="400"
+            alt="cat6" loading="lazy" width="300" height="400"
         />
         </picture>
         </main>
