--- a/weather/gallery.html
+++ b/weather/gallery.html
@@ -13,7 +13,6 @@
         <link rel="stylesheet" href="css/medium.css" />
         <link rel="stylesheet" href="css/large.css" />
         <script defer src="js/script.js"></script>
-        <script defer src="js/windchill.js"></script>
     </head>
     <body>
         <div id="prestonbanner"><p>Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion</p></div>
@@ -29,8 +28,8 @@
         <nav class="navbar">
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Preston Idaho</a></li>
+                <li><a href="preston.html">Home</a></li>
+                <li><a href="preston.html">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
                 <li><a href="#">Storm Center</a></li>
@@ -40,15 +39,75 @@
         <main>
             <h2 class="cityname">Weather Gallery</h2>
             <div id="weathergallery">
-                <div><img><p>klsdfjlkajf</p></div>
-
+                <div id="picture-one">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="https://images.unsplash.com/photo-1492011221367-f47e3ccd77a0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                    alt="lighting" width="300" height="400">
+                    <p>klsdfjlkajf</p>
+                </div>
+                <div id="picture-two">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="https://images.unsplash.com/photo-1534274988757-a28bf1a57c17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+                    alt="rain" width="300" height="400">
+                    <p>klsdfjlkajf</p>
+                </div>
+                <div id="picture-three">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80"
+                    alt="very cloudy" width="300" height="400">
+                    <p>klsdfjlkajf</p>
+                </div>
+                <div id="picture-four">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="https://images.unsplash.com/photo-1558486012-817176f84c6d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=670&q=80"
+                    alt="partly cloudy" width="300" height="400">
+                    <p>klsdfjlkajf</p>
+                </div>
+                <div id="picture-five">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="https://images.unsplash.com/photo-1516912481808-3406841bd33c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=744&q=80"
+                    alt="thunders" width="300" height="400">
+                    <p>klsdfjlkajf</p>
+                </div>
+                <div id="picture-six">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="https://images.unsplash.com/photo-1615196534250-a670810aa78e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                    alt="sunny" width="300" height="400">
+                    <p>klsdfjlkajf</p>
+                </div>
+                <div id="picture-seven">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="https://images.unsplash.com/photo-1534274988757-a28bf1a57c17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+                    alt="lighting" width="300" height="400">
+                    <p>klsdfjlkajf</p>
+                </div>
+                <div id="picture-eight">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="https://images.unsplash.com/photo-1454789476662-53eb23ba5907?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=752&q=80"
+                    alt="hurricane" width="300" height="400">
+                    <p>klsdfjlkajf</p>
+                </div>
+                <div id="picture-nine">
+                    <img            
+                    src="images/placeholder-image.webp"
+                    data-src="https://images.unsplash.com/photo-1514632595-4944383f2737?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                    alt="snow" width="300" height="400">
+                    <p>klsdfjlkajf</p>
+                </div>
             </div>
         </main>
         <footer>
             <p>
-                &copy;<span id="year"></span> |
-                <a href="https://github.com/Dianauguerra/Dianauguerra.github.io">Diana Urbina Guerra</a> | VA, USA
-                |
+                &copy;<span id="year"></span>  |
+                <a href="https://lan21005.github.io/">Diana Urbina</a> | VA, USA
                 <a href="https://www.byui.edu/online">BYUI Online Learning</a>
             </p>
             <p>Last Modified:</p>
