--- a/weather/preston.html
+++ b/weather/preston.html
@@ -29,7 +29,7 @@
         <nav class="navbar">
             <ul class="navigation">
                 <li><a href="#" onclick="toggleMenu()">Menu</a></li>
-                <li><a href="#">Home</a></li>
+                <li><a href="preston.html">Home</a></li>
                 <li class="active"><a href="#">Preston Idaho</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
