--- a/weather/gallery.html
+++ b/weather/gallery.html
@@ -44,63 +44,63 @@
                     src="images/placeholder-image.webp"
                     data-src="https://images.unsplash.com/photo-1492011221367-f47e3ccd77a0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
                     alt="lighting" width="300" height="400">
-                    <p>klsdfjlkajf</p>
+                    <p>Lighting and thunderstorm in Greenville</p>
                 </div>
                 <div id="picture-two">
                     <img            
                     src="images/placeholder-image.webp"
                     data-src="https://images.unsplash.com/photo-1534274988757-a28bf1a57c17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
                     alt="rain" width="300" height="400">
-                    <p>klsdfjlkajf</p>
+                    <p>Shower rain over Springfield</p>
                 </div>
                 <div id="picture-three">
                     <img            
                     src="images/placeholder-image.webp"
                     data-src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80"
                     alt="very cloudy" width="300" height="400">
-                    <p>klsdfjlkajf</p>
+                    <p>Very cloudy sky in Franklin</p>
                 </div>
                 <div id="picture-four">
                     <img            
                     src="images/placeholder-image.webp"
                     data-src="https://images.unsplash.com/photo-1558486012-817176f84c6d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=670&q=80"
                     alt="partly cloudy" width="300" height="400">
-                    <p>klsdfjlkajf</p>
+                    <p>Partly cloudy over north Clark County</p>
                 </div>
                 <div id="picture-five">
                     <img            
                     src="images/placeholder-image.webp"
                     data-src="https://images.unsplash.com/photo-1516912481808-3406841bd33c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=744&q=80"
                     alt="thunders" width="300" height="400">
-                    <p>klsdfjlkajf</p>
+                    <p>Thunders in Greenville</p>
                 </div>
                 <div id="picture-six">
                     <img            
                     src="images/placeholder-image.webp"
                     data-src="https://images.unsplash.com/photo-1615196534250-a670810aa78e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
                     alt="sunny" width="300" height="400">
-                    <p>klsdfjlkajf</p>
+                    <p>Sunny sky in Preston</p>
                 </div>
                 <div id="picture-seven">
                     <img            
                     src="images/placeholder-image.webp"
                     data-src="https://images.unsplash.com/photo-1534274988757-a28bf1a57c17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
                     alt="lighting" width="300" height="400">
-                    <p>klsdfjlkajf</p>
+                    <p>Lighting strikes over Springfield</p>
                 </div>
                 <div id="picture-eight">
                     <img            
                     src="images/placeholder-image.webp"
                     data-src="https://images.unsplash.com/photo-1454789476662-53eb23ba5907?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=752&q=80"
-                    alt="hurricane" width="300" height="400">
-                    <p>klsdfjlkajf</p>
+                    alt="tornado" width="300" height="400">
+                    <p>Tornador forming over north Clark County</p>
                 </div>
                 <div id="picture-nine">
                     <img            
                     src="images/placeholder-image.webp"
                     data-src="https://images.unsplash.com/photo-1514632595-4944383f2737?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
                     alt="snow" width="300" height="400">
-                    <p>klsdfjlkajf</p>
+                    <p>Fresh snow over Preston Streets</p>
                 </div>
             </div>
         </main>
