--- a/weather/gallery.html
+++ b/weather/gallery.html
@@ -49,7 +49,7 @@
                 <div id="picture-two">
                     <img            
                     src="images/placeholder-image.webp"
-                    data-src="https://images.unsplash.com/photo-1534274988757-a28bf1a57c17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+                    data-src="images/1.jpeg"
                     alt="rain" width="300" height="400">
                     <p>Shower rain over Springfield</p>
                 </div>
